# lodestar

./: .env.example  .gitignore  README.md  constitution.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
config/: arxiv.yaml  domains.yaml  prefilter.yaml  trusted_sources.yaml  watchlist.yaml
digests/: 2026-07-10.md  2026-07-11.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md
evals/: __init__.py  fixtures.py  judge_gating.py  no_repeat.py
runs/: 2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
src/lodestar/: __init__.py  config.py  credibility.py  digest.py  graph.py  judge.py  main.py  models.py  observability.py  prefilter.py  ranking.py  state.py  synthesize.py  verifier.py
src/lodestar/memory/: __init__.py  behavior_model.py  dates.py  events.py  seen_keys.py  watermark.py
src/lodestar/sources/: __init__.py  arxiv.py  base.py  exa.py  github.py  hackernews.py
state/: behavior_model.json  events.jsonl  seen_keys.txt  watermarks.json
tests/: test_credibility.py  test_digest.py  test_events.py  test_fixture_pipeline.py  test_graph.py  test_judge.py  test_memory.py  test_prefilter.py  test_ranking.py  test_sources.py  test_verifier.py
