[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lodestar"
version = "0.0.1"
description = "Daily tech-intelligence digest — a supervisor-orchestrated multi-agent system with a tiered, event-sourced memory architecture."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "black>=24",
]

[project.scripts]
lodestar = "lodestar.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/lodestar"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
